removing state abbr task

--- a/desoto_migration/notebooks/2_visprep.ipynb
+++ b/desoto_migration/notebooks/2_visprep.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
     "import glob\n",
     "\n",
     "# load all processed data\n",
@@ -143,81 +144,6 @@
    "metadata": {},
    "source": [
     "### Map of net movers by county to DeSoto County, Miss."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ap style state abbreviations for labels\n",
-    "state_ap_abbreviations = {\n",
-    "    \"Alabama\": \"Ala.\",\n",
-    "    \"Alaska\": \"Alaska\",\n",
-    "    \"Arizona\": \"Ariz.\",\n",
-    "    \"Arkansas\": \"Ark.\",\n",
-    "    \"California\": \"Calif.\",\n",
-    "    \"Colorado\": \"Colo.\",\n",
-    "    \"Connecticut\": \"Conn.\",\n",
-    "    \"Delaware\": \"Del.\",\n",
-    "    \"Florida\": \"Fla.\",\n",
-    "    \"Georgia\": \"Ga.\",\n",
-    "    \"Hawaii\": \"Hawaii\",\n",
-    "    \"Idaho\": \"Idaho\",\n",
-    "    \"Illinois\": \"Ill.\",\n",
-    "    \"Indiana\": \"Ind.\",\n",
-    "    \"Iowa\": \"Iowa\",\n",
-    "    \"Kansas\": \"Kan.\",\n",
-    "    \"Kentucky\": \"Ky.\",\n",
-    "    \"Louisiana\": \"La.\",\n",
-    "    \"Maine\": \"Maine\",\n",
-    "    \"Maryland\": \"Md.\",\n",
-    "    \"Massachusetts\": \"Mass.\",\n",
-    "    \"Michigan\": \"Mich.\",\n",
-    "    \"Minnesota\": \"Minn.\",\n",
-    "    \"Mississippi\": \"Miss.\",\n",
-    "    \"Missouri\": \"Mo.\",\n",
-    "    \"Montana\": \"Mont.\",\n",
-    "    \"Nebraska\": \"Neb.\",\n",
-    "    \"Nevada\": \"Nev.\",\n",
-    "    \"New Hampshire\": \"N.H.\",\n",
-    "    \"New Jersey\": \"N.J.\",\n",
-    "    \"New Mexico\": \"N.M.\",\n",
-    "    \"New York\": \"N.Y.\",\n",
-    "    \"North Carolina\": \"N.C.\",\n",
-    "    \"North Dakota\": \"N.D.\",\n",
-    "    \"Ohio\": \"Ohio\",\n",
-    "    \"Oklahoma\": \"Okla.\",\n",
-    "    \"Oregon\": \"Ore.\",\n",
-    "    \"Pennsylvania\": \"Pa.\",\n",
-    "    \"Rhode Island\": \"R.I.\",\n",
-    "    \"South Carolina\": \"S.C.\",\n",
-    "    \"South Dakota\": \"S.D.\",\n",
-    "    \"Tennessee\": \"Tenn.\",\n",
-    "    \"Texas\": \"Texas\",\n",
-    "    \"Utah\": \"Utah\",\n",
-    "    \"Vermont\": \"Vt.\",\n",
-    "    \"Virginia\": \"Va.\",\n",
-    "    \"Washington\": \"Wash.\",\n",
-    "    \"West Virginia\": \"W.Va.\",\n",
-    "    \"Wisconsin\": \"Wis.\",\n",
-    "    \"Wyoming\": \"Wyo.\",\n",
-    "    \"District of Columbia\": \"D.C.\",\n",
-    "    \"Puerto Rico\": \"P.R.\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# type: ignore\n",
-    "acs_desoto_flows_15y[\"county\"] = acs_desoto_flows_15y[\"county\"].apply(\n",
-    "    lambda x: x.split(\", \")[0] + \", \" + state_ap_abbreviations[x.split(\", \")[1]]\n",
-    ")"
    ]
   },
   {
